create model user on mysql

--- a/socket/src/config/config.json
+++ b/socket/src/config/config.json
@@ -5,8 +5,7 @@
     "database": "dbusers",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "logging": false,
-    "timezone": "+07:00"
+    "logging": false
   },
   "test": {
     "username": "root",
